kubernetes/main/apps/security/authentik/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-server
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/component: server
  ingress:
    - {}
  egress:
    # allow redis connection
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: authentik-redis
      toPorts:
        - ports:
            - port: "6379"
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authentik-worker
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/component: worker
  ingress:
    - {}
  egress:
    # allow redis connection
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: authentik-redis
      toPorts:
        - ports:
            - port: "6379"
